Closed
Bug 1113526
Opened 11 years ago
Closed 11 years ago
The text appears behind the image
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
| Tracking | Status | |
|---|---|---|
| firefox35 | --- | unaffected |
| firefox36 | + | fixed |
| firefox37 | + | fixed |
People
(Reporter: alice0775, Assigned: smontagu)
References
Details
(Keywords: regression, testcase)
Attachments
(3 files, 1 obsolete file)
|
1.39 KB,
text/html
|
Details | |
|
1.41 KB,
patch
|
jfkthame
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
2.09 KB,
patch
|
jfkthame
:
feedback-
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1105137 +++
The text appears behind the image in page https://dl.dropboxusercontent.com/u/95157096/85f61cf7/ItJnkL8E9x.html.
Screenshot https://dl.dropboxusercontent.com/u/95157096/85f61cf7/Qxj3jZf7uG.png.
Bug 1105137 does not fix the problem...
| Reporter | ||
Updated•11 years ago
|
Keywords: testcase-wanted
| Reporter | ||
Comment 1•11 years ago
|
||
Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=506226a2e6c0&tochange=f1d7da5ff1ed
Last Good: 1de2c87f94e5
First Bad: 2a2316981708
Triggered by:
2a2316981708 Simon Montagu — Bug 1062963 patch 3: make nsFloatManager's origin a LogicalPoint, adapt GetFlowAreas, AddFloats, ClearFloats, etc. to use it and make nsFloatManager region functions work with logical region. r=jfkthame
This also happens in https://dl.dropboxusercontent.com/u/95157096/85f61cf7/uidssg5u5s.html.
Screenshot https://dl.dropboxusercontent.com/u/95157096/85f61cf7/2sjkgf65kg.png
I think this happens if the picture within the frame.
| Reporter | ||
Comment 3•11 years ago
|
||
STR
1. Load reduced testcase and reload
---- observe layout
2. Zoom In and then Zoom Out
---- observe layout
Actual Results:
Layout is broken at step 1.
layout is corrected at step 2, after reflow(ZoomIn/Out)
| Reporter | ||
Updated•11 years ago
|
Keywords: testcase-wanted → testcase
| Reporter | ||
Comment 4•11 years ago
|
||
Attachment #8539697 -
Attachment is obsolete: true
| Reporter | ||
Comment 5•11 years ago
|
||
[Tracking Requested - why for this release]: layout is broken due to regression of Bug 1062963
status-firefox35:
--- → unaffected
status-firefox36:
--- → affected
status-firefox37:
--- → affected
tracking-firefox36:
--- → ?
tracking-firefox37:
--- → ?
Flags: needinfo?(smontagu)
| Assignee | ||
Comment 6•11 years ago
|
||
Assignee: nobody → smontagu
Flags: needinfo?(smontagu)
Attachment #8540205 -
Flags: review?(jfkthame)
| Assignee | ||
Comment 7•11 years ago
|
||
I don't really understand this testcase, and it doesn't show the bug when loaded locally, so I'm not sure if I want to check it in, but here it is as a reftest so we can decide what to do with it. The test from bug 1114329 may be sufficient anyway.
Attachment #8540208 -
Flags: feedback?(jfkthame)
Comment 8•11 years ago
|
||
Comment on attachment 8540208 [details] [diff] [review]
Reftest based on the testcase
Review of attachment 8540208 [details] [diff] [review]:
-----------------------------------------------------------------
It looks like the wrong files ended up in this patch...
As for the testcase in this bug, note that it doesn't fail on initial load; you have to hit Reload to trigger the bad rendering. I'm not sure whether we'd be able to reproduce that behavior in the reftest framework, or if it'd need to be converted to a mochitest form.
Attachment #8540208 -
Flags: feedback?(jfkthame) → feedback-
Comment 10•11 years ago
|
||
Comment on attachment 8540205 [details] [diff] [review]
Patch: make GetLogicalNormalPosition return the correct logical origin of the frame, not just convert the physical origin to logical coordinates
Review of attachment 8540205 [details] [diff] [review]:
-----------------------------------------------------------------
Makes sense - and fixes the bug, according to local testing. :)
Attachment #8540205 -
Flags: review?(jfkthame) → review+
| Assignee | ||
Comment 11•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/bf55c6f6424d
https://hg.mozilla.org/integration/mozilla-inbound/rev/860181fd59cf
With the reftest from bug 1114329, since this patch fixes that test, but not the original problem reported in the bug.
Flags: in-testsuite+
OS: Windows 7 → All
Hardware: x86_64 → All
Comment 12•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Comment 14•11 years ago
|
||
Simon, can we have an uplift request for aurora? Thanks
Flags: needinfo?(smontagu)
| Assignee | ||
Comment 15•11 years ago
|
||
Comment on attachment 8540205 [details] [diff] [review]
Patch: make GetLogicalNormalPosition return the correct logical origin of the frame, not just convert the physical origin to logical coordinates
Approval Request Comment
[Feature/regressing bug #]: 1062963
[User impact if declined]: Elements in right-to-left pages can be invisible or mispositioned.
[Describe test coverage new/current, TBPL]: Baked on trunk since 2014-12-24, checkin includes regression test
[Risks and why]: Low risk one-line fix. Left-to-right pages will not be affected by the patch at all.
[String/UUID change made/needed]: None
Flags: needinfo?(smontagu)
Attachment #8540205 -
Flags: approval-mozilla-aurora?
Comment 16•11 years ago
|
||
Comment on attachment 8540205 [details] [diff] [review]
Patch: make GetLogicalNormalPosition return the correct logical origin of the frame, not just convert the physical origin to logical coordinates
thanks!
Attachment #8540205 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 17•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•