Bug 1113526: make GetLogicalNormalPosition return the correct logical origin of the frame, not just convert the physical origin to logical coordinates, r=jfkthame